<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.details.ItemDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <include
                android:id="@+id/shimmerLayout"
                layout="@layout/shimmer_loading_view" />


            <LinearLayout
                android:id="@+id/errorContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/error_state"
                    android:src="@drawable/error_state" />

                <TextView
                    android:id="@+id/txtErrorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/error_state_msg"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnRetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/retry" />
            </LinearLayout>

            <!-- image slider -->
            <FrameLayout
                android:id="@+id/lytTopContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgShare"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/share_icon"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="top|end"
                    android:padding="4dp"
                    android:src="@drawable/ic_share"
                    android:visibility="invisible"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/txtSlideNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/indicator_background"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </FrameLayout>

            <!-- basic info view -->
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="6dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lytTopContainer" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                android:paddingTop="6dp"
                android:textAlignment="textStart"
                android:textColor="@color/green_500"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="6dp"
                android:paddingTop="18dp"
                android:textAlignment="textStart"
                android:textColor="@color/gray_600"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPrice" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lytCalendarVisitsIdRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAddress">

                <ImageView
                    android:id="@+id/imgCalendar"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="2dp"
                    android:contentDescription="@string/calendar"
                    android:paddingStart="0dp"
                    android:paddingEnd="2dp"
                    android:src="@drawable/ic_calendar"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/gray_600"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imgVisits"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:contentDescription="@string/visits_count"
                    android:paddingStart="0dp"
                    android:paddingEnd="2dp"
                    android:src="@drawable/ic_visits"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txtVisits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/gray_600"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/txtId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/gray_600"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- details view -->
            <View
                android:id="@+id/dividerDetails"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_100"
                android:paddingTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lytCalendarVisitsIdRow" />

            <TextView
                android:id="@+id/txtDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="6dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerDetails" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvDetailsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDetailsTitle" />

            <!-- features view -->
            <View
                android:id="@+id/dividerFeatures"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/gray_100"
                android:paddingTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/rcvDetailsInfo" />

            <TextView
                android:id="@+id/txtFeaturesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="6dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerFeatures" />

            <View
                android:id="@+id/separatorFeatures"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/gray_100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFeaturesTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvFeaturesInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/separatorFeatures" />

            <!-- docs view -->
            <View
                android:id="@+id/dividerDocs"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_100"
                android:paddingTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvFeaturesInfo" />

            <TextView
                android:id="@+id/txtDocumentsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="6dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerDocs" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvDocsInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtDocumentsTitle" />

            <!-- description view -->
            <View
                android:id="@+id/dividerDescription"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginVertical="10dp"
                android:background="@color/gray_100"
                android:paddingTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvDocsInfo" />

            <TextView
                android:id="@+id/txtDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="6dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerDescription" />

            <View
                android:id="@+id/separatorDescription"
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/gray_100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDescriptionTitle" />

            <TextView
                android:id="@+id/txtDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="8dp"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separatorDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>